Second phase red pen edits to end of chapter 3.

--- a/bib.bib
+++ b/bib.bib
@@ -108,17 +108,17 @@ title = {{Pervasive Computing in Time and Space: The Culture and Context of 'Pla
 url = {http://dx.doi.org/doi:10.1109/IE.2011.65},
 year = {2011}
 }
-@inproceedings{Applin2013,
-author = {Applin, Sally A and Fischer, Michael},
-booktitle = {Proceedings of the IEEE International Symposium on Technology and Society (ISTAS)},
-title = {{Watching Me, Watching You (Process Surveillance and Agency in the Workplace)}},
-year = {2013}
-}
 @inproceedings{Applin2013a,
 abstract = {We explore how PolySocial Reality (PoSR), a framework for representing how people, devices and communication technologies interrelate, can be applied to developing use cases within integrated IoT and Smart Environment paradigms, giving special consideration to the nature of location-aware messaging from sensors, and the resultant data collection.},
 author = {Applin, Sally A and Fischer, Michael},
 booktitle = {Proceedings of the IEEE Conference on Intelligent User Interfaces (IUI 2013) IUI Workshop on Location Awareness for Mixed and Dual Reality (LAMDa)},
 title = {{Thing Theory: Connecting Humans to Location-Aware Smart Environments}},
+year = {2013}
+}
+@inproceedings{Applin2013,
+author = {Applin, Sally A and Fischer, Michael},
+booktitle = {Proceedings of the IEEE International Symposium on Technology and Society (ISTAS)},
+title = {{Watching Me, Watching You (Process Surveillance and Agency in the Workplace)}},
 year = {2013}
 }
 @misc{Applin2011b,
@@ -810,6 +810,12 @@ publisher = {Oxford University Press},
 title = {{The Virtuality and Reality of Avatar Cyberspace}},
 year = {2014}
 }
+@misc{Daviesb,
+author = {Davies, C J},
+title = {{Database as tar archive suitable for input into pg\_restore}},
+url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_tar\_for\_pg\_restore},
+urldate = {2013-04-01}
+}
 @misc{Davies,
 author = {Davies, C J},
 title = {{Arduino sketch for Pangolin}},
@@ -820,12 +826,6 @@ urldate = {2013-04-01}
 author = {Davies, C J},
 title = {{Pangolin source code}},
 url = {https://bitbucket.org/cj\_davies/viewer-release-serial-io},
-urldate = {2013-04-01}
-}
-@misc{Daviesb,
-author = {Davies, C J},
-title = {{Database as tar archive suitable for input into pg\_restore}},
-url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_tar\_for\_pg\_restore},
 urldate = {2013-04-01}
 }
 @misc{Daviesc,
@@ -1366,17 +1366,17 @@ title = {{Bridging physical and virtual worlds with tagged documents, objects an
 url = {http://doi.acm.org/10.1145/632716.632738},
 year = {1999}
 }
-@misc{Harta,
-author = {Hart, Mikal},
-title = {{TinyGPS}},
-url = {http://arduiniana.org/libraries/tinygps/},
-urldate = {2013-03-31}
-}
 @misc{Hart,
 author = {Hart, Mikal},
 title = {{TinyGPS}},
 url = {http://arduiniana.org/libraries/tinygps/},
 urldate = {2013-04-01}
+}
+@misc{Harta,
+author = {Hart, Mikal},
+title = {{TinyGPS}},
+url = {http://arduiniana.org/libraries/tinygps/},
+urldate = {2013-03-31}
 }
 @misc{Haverinen2009,
 abstract = {Magnetic field fluctuations in modern buildings arise from both natural and man-made sources, such as steel and reinforced concrete structures, electric power systems, electric and electronic appliances, and industrial devices. If the anomalies of the magnetic field inside the building are nearly static and they have sufficient local variability, they provide a unique magnetic fingerprint that can be utilized in global self-localization. In this article, a Monte Carlo localization (MCL) technique based on this hypothesis is proposed. The feasibility of the technique is demonstrated by presenting a series of global localization experiments conducted in four arbitrarily selected buildings, including a hospital. The experiment setup consists of a mobile robot instrumented with a 3-axis magnetometer and a computer. In addition, successful human self-localization experiments were conducted by using a wireless wearable magnetometer. The reported experiments suggest that the ambient magnetic field may remain sufficiently stable for longer periods of time, giving support for self-localization techniques utilizing the local deviations of the field.},
@@ -1407,16 +1407,6 @@ url = {http://linkinghub.elsevier.com/retrieve/pii/S0921889009001092},
 volume = {57},
 year = {2009}
 }
-@article{Heeter2003,
-abstract = {I have lived in San Francisco while working as a full-time virtual faculty member for Michigan State University for nearly six years. Unlike most humans, I spend a larger proportion of every day as a virtual person than as a physical person. This article is adapted from a keynote speech I delivered at the Fourth International Workshop on Presence in Philadelphia in May of 2001. I use a personal narrative style to explore issues and to question some of the research community's prevailing assumptions about presence. Lombard and Ditton's (1997) frequently cited conceptualization defines presence as a “perceptual illusion of nonmediation” that occurs “when a person fails to perceive or acknowledge the existence of a medium in his/her communication environment and responds as he/she would if the medium were not there.” The underlying assumption is that, in the absence of technology, everyone experiences continuous presence at a constant intensity throughout their lives. Instead, this article suggests that presence is not a constant of everyday nonmediated experience. Careful consideration of unmediated (real) presence might help the conceptualization and study of mediated presence.},
-author = {Heeter, Carrie},
-journal = {Presence: Teleoperators and Virtual Environments},
-number = {4},
-pages = {335--345},
-title = {{Reflections on Real Presence by a Virtual Person}},
-volume = {12},
-year = {2003}
-}
 @article{Heeter1992,
 abstract = {What do you feel when you enter a virtual world? What creates the experience of presence? What factors contribute to making you feel like you are there1 ?},
 author = {Heeter, Carrie},
@@ -1430,6 +1420,16 @@ title = {{Being there: The subjective experience of presence}},
 url = {http://dl.acm.org/citation.cfm?id=196589},
 volume = {1},
 year = {1992}
+}
+@article{Heeter2003,
+abstract = {I have lived in San Francisco while working as a full-time virtual faculty member for Michigan State University for nearly six years. Unlike most humans, I spend a larger proportion of every day as a virtual person than as a physical person. This article is adapted from a keynote speech I delivered at the Fourth International Workshop on Presence in Philadelphia in May of 2001. I use a personal narrative style to explore issues and to question some of the research community's prevailing assumptions about presence. Lombard and Ditton's (1997) frequently cited conceptualization defines presence as a “perceptual illusion of nonmediation” that occurs “when a person fails to perceive or acknowledge the existence of a medium in his/her communication environment and responds as he/she would if the medium were not there.” The underlying assumption is that, in the absence of technology, everyone experiences continuous presence at a constant intensity throughout their lives. Instead, this article suggests that presence is not a constant of everyday nonmediated experience. Careful consideration of unmediated (real) presence might help the conceptualization and study of mediated presence.},
+author = {Heeter, Carrie},
+journal = {Presence: Teleoperators and Virtual Environments},
+number = {4},
+pages = {335--345},
+title = {{Reflections on Real Presence by a Virtual Person}},
+volume = {12},
+year = {2003}
 }
 @article{Heim1998,
 abstract = {"Virtual Realism" is an art form and a way of living with technology. To explain the concept, the author begins with the conflict inherent in the philosophy of technology (Unabomber and the computer culture). The article draws on interactive art, software engineering, and popular culture to clarify the issue of lifestyles. Twelve suggestions are made to develop a harmony of technology and lifestyle. The article is a chapter in a book by the same title (Oxford U. Press, 1998)>},
@@ -1519,6 +1519,13 @@ url = {http://www.htc.com/www/smartphones/htc-one-s/},
 urldate = {2013-03-28},
 year = {2013}
 }
+@misc{Hughes2006a,
+author = {Hughes, Ian},
+title = {{Second Life – Outside in}},
+url = {http://eightbar.co.uk/2006/04/09/second-life-outside-in/},
+urldate = {2012-05-21},
+year = {2006}
+}
 @misc{Hughes2006b,
 author = {Hughes, Ian},
 title = {{Well it got my attention – Second Life}},
@@ -1543,13 +1550,6 @@ year = {2009}
 author = {Hughes, Ian},
 title = {{Wimbledon in Second Life}},
 url = {http://eightbar.co.uk/2006/06/27/wimbledon-in-second-life/},
-urldate = {2012-05-21},
-year = {2006}
-}
-@misc{Hughes2006a,
-author = {Hughes, Ian},
-title = {{Second Life – Outside in}},
-url = {http://eightbar.co.uk/2006/04/09/second-life-outside-in/},
 urldate = {2012-05-21},
 year = {2006}
 }
@@ -1591,10 +1591,10 @@ volume = {18},
 year = {1998}
 }
 @article{Ikeuchi2003,
-annote = {Research on digital preservation of cultural assets (in this case statues of Buddha) \&digital restoration of their original appearance. Gets very maths-ey.Usable quote - "Currently, a large number of cultural heritage objects around the worldare deteriorating or being destroyed because of natural weathering, disasters and civil wars."},
 author = {Ikeuchi, Katsushi and Nakazawa, Atsushi and Hasegawa, Kazuhide and Ohishi, Takeshi},
 file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Ikeuchi et al. - 2003 - The Great Buddha Project Modeling Cultural Heritage for VR Systems through Observation.pdf:pdf},
 isbn = {0-7695-2006-5},
+journal = {Proceedings of the Second IEEE and ACM International Symposium on Mixed and Augmented Reality},
 month = oct,
 pages = {7},
 title = {{The Great Buddha Project: Modeling Cultural Heritage for VR Systems through Observation}},
@@ -1607,18 +1607,18 @@ title = {{Accuracy of IndoorAtlas indoor positioning system}},
 url = {https://www.indooratlas.com/faq\#q242897},
 urldate = {2014-01-13}
 }
+@misc{IndoorAtlasLtd.,
+author = {{IndoorAtlas Ltd.}},
+title = {{Technology}},
+url = {http://www.indooratlas.com/Technology},
+urldate = {2013-02-11}
+}
 @unpublished{IndoorAtlasLtd.2012,
 author = {{IndoorAtlas Ltd.}},
 pages = {5},
 title = {{Ambient magnetic field-based indoor location technology}},
 url = {http://web.indooratlas.com/web/WhitePaper.pdf},
 year = {2012}
-}
-@misc{IndoorAtlasLtd.,
-author = {{IndoorAtlas Ltd.}},
-title = {{Technology}},
-url = {http://www.indooratlas.com/Technology},
-urldate = {2013-02-11}
 }
 @incollection{Insko2003,
 abstract = {Virtual reality (VR) systems enable the user to feel as if they are present in a computer generated environment. But how do we determine the extent to which a user feels present in the virtual environment? This chapter examines three categories of methods commonly used for measuring presence; their use in the field, advantages, and disadvantages. Subjective measures rely on self-assessment by the user. Users answer questions such as "How real did the environment seem to you?", "Was the environment like a place you visited, or a series of images presented to you?". Behavioral measures examine actions or manners exhibited by the user that are responses to objects or events in the virtual environment. For example, does the user duck if a virtual object is thrown at his head. Physiological methods attempt to measure presence by gauging changes in the subject's heart rate, skin temperature, skin conductance, breathing rate, etc. In a stress-inducing virtual environment does the user exhibit physiological signs of stress? How do these methods compare when using the criteria of reliability, validity, objectivity, and sensitivity.},
@@ -2112,7 +2112,7 @@ year = {2000}
 }
 @inproceedings{Liestøl2009,
 abstract = {In digital media - including augmented reality research - rapid change continue to take place at the levels of hardware and software. This paper focus on a third layer in a hierarchy of digital media - meaningware. Meaningware is the domain of digital textuality, its genres and conventions - all key subject matters of the humanities. To prevent cultural lag at the textual level the conduct of genre design is suggested as a methodological approach. The potential 'genre' experimented with here is a type of augmented reality system we have named Situated Simulations. The system takes advantage of the convergence of mobility, broadband, rich graphics capabilities and positioning/orientation technologies, on off the shelf mobile phones. The current platform applied is Apple's iPhone. The paper describes the development of three prototyped situated simulations designed for use in both learning and tourism. Interface and design issues are discussed, and a perspective on the epistemological increment of augmented reality and situated simulations is related to Bateson's notion of double descriptions.},
-author = {Liest\o l, Gunnar},
+author = {Liest$\backslash$o l, Gunnar},
 booktitle = {Arts, Media and Humanities Proceedings - IEEE 2009 International Symposium on Mixed and Augmented Reality, ISMAR-AMH 2009},
 doi = {10.1109/ISMAR-AMH.2009.5336730},
 file = {:external2/Situated Simulations (SitSim)/01 Augmented reality and digital genre design — Situated simulations on the iPhone.pdf:pdf},
@@ -2121,18 +2121,6 @@ keywords = {Augmented reality,Digital genre design,Meaningware,Situated simulati
 pages = {29--34},
 title = {{Augmented reality and digital genre design - Situated simulations on the iPhone}},
 year = {2009}
-}
-@incollection{Liestøl2011,
-author = {Liest\o l, Gunnar},
-booktitle = {Handbook of Augmented Reality},
-doi = {10.1007/978-1-4614-0064-6\_14},
-editor = {Furht, Borko},
-isbn = {978-1-4614-0063-9},
-pages = {309--319},
-publisher = {Springer New York},
-title = {{Situated Simulations Between Virtual Reality and Mobile Augmented Reality: Designing a Narrative Space}},
-url = {http://link.springer.com/chapter/10.1007\%2F978-1-4614-0064-6\_14},
-year = {2011}
 }
 @incollection{Liestøl2012,
 author = {Liest\o l, Gunnar},
@@ -2145,6 +2133,18 @@ publisher = {Springer Berlin Heidelberg},
 title = {{Solving the Centre–Periphery Problem in Cultural Heritage by Means of Situated Simulations}},
 url = {http://link.springer.com/chapter/10.1007/978-3-642-34234-9\_64},
 year = {2012}
+}
+@incollection{Liestøl2011,
+author = {Liest\o l, Gunnar},
+booktitle = {Handbook of Augmented Reality},
+doi = {10.1007/978-1-4614-0064-6\_14},
+editor = {Furht, Borko},
+isbn = {978-1-4614-0063-9},
+pages = {309--319},
+publisher = {Springer New York},
+title = {{Situated Simulations Between Virtual Reality and Mobile Augmented Reality: Designing a Narrative Space}},
+url = {http://link.springer.com/chapter/10.1007\%2F978-1-4614-0064-6\_14},
+year = {2011}
 }
 @incollection{Liestøl2014,
 author = {Liest\o l, Gunnar and Morrison, A},
@@ -2174,6 +2174,16 @@ title = {{Palmisano Gets A Second Life}},
 url = {http://www.businessweek.com/magazine/content/06\_47/b4010068.htm?chan=tc\&chan=technology\_technology+index+page\_today's+top+stories},
 urldate = {2012-05-21},
 year = {2006}
+}
+@phdthesis{Lifton2007a,
+address = {Department of Media Arts and Sciences},
+annote = {From Duplicate 1 ( Dual Reality: An Emerging Medium - Lifton, Joshua )},
+author = {Lifton, Joshua},
+month = sep,
+school = {Massachusetts Institute of Technology},
+title = {{Dual Reality: An Emerging Medium}},
+type = {Ph.D. Dissertation},
+year = {2007}
 }
 @inproceedings{lifton:adoption,
 annote = {        From Duplicate 1 (                           Consumer Adoption of Cross Reality Systems                         - Lifton, Joshua )
@@ -2211,16 +2221,6 @@ publisher = {Meta Institute for Computational Astrophysics (MICA)},
 title = {{Trends, Dual Reality, and Identity in Virtual Worlds}},
 url = {http://dspace.mit.edu/openaccess-disseminate/1721.1/61991},
 year = {2009}
-}
-@phdthesis{Lifton2007a,
-address = {Department of Media Arts and Sciences},
-annote = {From Duplicate 1 ( Dual Reality: An Emerging Medium - Lifton, Joshua )},
-author = {Lifton, Joshua},
-month = sep,
-school = {Massachusetts Institute of Technology},
-title = {{Dual Reality: An Emerging Medium}},
-type = {Ph.D. Dissertation},
-year = {2007}
 }
 @inproceedings{Lifton2007b,
 address = {New York, New York, USA},
@@ -2710,6 +2710,12 @@ pages = {295--296},
 title = {{Localization System for Large Indoor Environments Using Invisible markers}},
 year = {2008}
 }
+@inproceedings{Okura2011,
+author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
+booktitle = {International Conference on Computer Graphics and Interactive Techniques, SIGGRAPH 2011, Vancouver, BC, Canada, August 7-11, 2011 , Poster Proceedings},
+title = {{Fly-through Heijo Palace Site: Historical Tourism System Using Augmented Telepresence}},
+year = {2011}
+}
 @article{Okura2006,
 abstract = {Augmented Telepresence is a technique for viewing a remote site using immersive displays.},
 author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
@@ -2719,12 +2725,6 @@ pages = {4503--4503},
 title = {{Fly-through Heijo Palace Site : Augmented Telepresence Using Aerial Omnidirectional Videos}},
 volume = {1},
 year = {2006}
-}
-@inproceedings{Okura2011,
-author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
-booktitle = {International Conference on Computer Graphics and Interactive Techniques, SIGGRAPH 2011, Vancouver, BC, Canada, August 7-11, 2011 , Poster Proceedings},
-title = {{Fly-through Heijo Palace Site: Historical Tourism System Using Augmented Telepresence}},
-year = {2011}
 }
 @misc{Oliver2010,
 author = {Oliver, Iain A and Miller, Alan H D and Allison, Colin},
@@ -3117,12 +3117,6 @@ publisher = {Springer-Verlag},
 title = {{Cyberspace as Representation of Space Experience: In Defence of a Phenomenological Approach}},
 year = {2002}
 }
-@article{Regenbrecht1992,
-author = {Regenbrecht, Holger and Schubert, Thomas},
-keywords = {augmented reality,sense of presence},
-title = {{Measuring Presence in Augmented Reality Environments : Design and a First Test of a Questionnaire}},
-year = {1992}
-}
 @misc{Regenbrecht2002a,
 abstract = {It has long been argued that the possibility to interact in and with a virtual environment (VE) enhances the sense of pres- ence. On the basis of a three-component model of presence, we specify this hypothesis and argue that the mental represen- tation of possible actions should especially enhance spatial presence, and to a lesser extent the involvement and realness of a VE. We support this hypothesis in three studies. A corre- lative study showed that self-reported interaction possibilities correlated significantly with spatial presence, but not with the other two factors. A first experimental study showed that pos- sible self-movement significantly increased spatial presence and realness. A second experimental study showed that even the illusion of interaction, with no actual interaction taking place, significantly increased spatial presence.},
 author = {Regenbrecht, Holger and Schubert, Thomas},
@@ -3133,6 +3127,12 @@ pages = {425--434},
 title = {{Real and Illusory Interactions Enhance Presence in Virtual Environments}},
 volume = {11},
 year = {2002}
+}
+@article{Regenbrecht1992,
+author = {Regenbrecht, Holger and Schubert, Thomas},
+keywords = {augmented reality,sense of presence},
+title = {{Measuring Presence in Augmented Reality Environments : Design and a First Test of a Questionnaire}},
+year = {1992}
 }
 @inproceedings{Regenbrecht2002,
 author = {Regenbrecht, Holger and Schubert, Thomas},
@@ -3335,6 +3335,19 @@ url = {http://www.theguardian.com/technology/2012/apr/05/google-project-glass-di
 urldate = {2014-12-22},
 year = {2012}
 }
+@incollection{Schubert1999,
+abstract = {Schubert, T.W., Friedman, F., \& Regenbrecht, H.T. (1999). Embodied presence in virtual environments. In: Paton R, Neilson I (Eds.). Visual representations and interpretations. Springer-Verlag, London, pp. 268–278.},
+author = {Schubert, Thomas and Friedmann, Frank and Regenbrecht, Holger},
+booktitle = {Visual representations and interpretations},
+doi = {10.1007/978-1-4471-0563-3\_30},
+editor = {{Paton R}, Neilson I},
+isbn = {9781441909183},
+pages = {268--278},
+publisher = {Springer-Verlag},
+title = {{Embodied presence in virtual environments}},
+url = {http://link.springer.com/chapter/10.1007/978-1-4471-0563-3\_30},
+year = {1999}
+}
 @misc{Schubert2001,
 abstract = {Within an embodied cognition framework, it is argued that presence in a virtual environment (VE) develops from the construction of a spatial-functional mental model of the VE. Two cognitive processes lead to this model: the representation of bodily actions as possible actions in the VE, and the suppression of incompatible sensory input. It is hypothesized that the conscious sense of presence reflects these two components as spatial presence and involvement. This prediction was con- firmed in two studies (N ? 246 and N ? 296) assessing self-reports of presence and immersion experiences. Additionally, judgments of “realness” were observed as a third presence component. A second-order factor analysis showed a distinction between presence, immersion, and interaction factors. Building on these results, a thirteen-item presence scale consisting of three independent components was de- veloped and verified using confirmatory factor analyses across the two studies. Presence is a construct, a variable with various levels and dimensions. Biocca and Delaney (1995, p. 62)},
 author = {Schubert, Thomas and Friedmann, Frank and Regenbrecht, Holger},
@@ -3348,19 +3361,6 @@ pmid = {18368863},
 title = {{The Experience of Presence: Factor Analytic Insights}},
 volume = {10},
 year = {2001}
-}
-@incollection{Schubert1999,
-abstract = {Schubert, T.W., Friedman, F., \& Regenbrecht, H.T. (1999). Embodied presence in virtual environments. In: Paton R, Neilson I (Eds.). Visual representations and interpretations. Springer-Verlag, London, pp. 268–278.},
-author = {Schubert, Thomas and Friedmann, Frank and Regenbrecht, Holger},
-booktitle = {Visual representations and interpretations},
-doi = {10.1007/978-1-4471-0563-3\_30},
-editor = {{Paton R}, Neilson I},
-isbn = {9781441909183},
-pages = {268--278},
-publisher = {Springer-Verlag},
-title = {{Embodied presence in virtual environments}},
-url = {http://link.springer.com/chapter/10.1007/978-1-4471-0563-3\_30},
-year = {1999}
 }
 @misc{Schweinzer2010a,
 abstract = {This paper presents an indoor positioning system called LOSNUS (LOcalization of Sensor Nodes by Ultra-Sound). It offers high accuracy of \~{}10 mm, a locating rate up to \~{}10 cycles/s and is applicable for both tracking mobile and locating static devices. LOSNUS is mainly designed to localize static devices especially in a wireless sensor network (WSN) with numerously deployed sensor/actuator devices which enables substantially improving a lot of aspects of applications, e.g. network integration of nodes, supplying node locations to application programs, supervising locations with respect to accidentally dislocating, automatic setup and detecting faking of node locations. In order to deal with the demand of locating static devices, the system is optimized for cheap implementation and on the other hand for a high resolution of locations. Concept and basic operation, realization of system components and low-cost receiver principles, improved system performance and setup of a test system will be discussed in this paper.},
@@ -3424,6 +3424,16 @@ keywords = {Passive Haptics,Substitutional Reality,Virtual Reality},
 title = {{Substitutional Reality : Using the Physical Environment to Design Virtual Reality Experiences}},
 year = {2015}
 }
+@article{Sivan2011,
+abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
+author = {Sivan, Yesha},
+journal = {Journal of Virtual Worlds Research},
+number = {3},
+title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
+url = {https://journals.tdl.org/jvwr/article/view/6140},
+volume = {4},
+year = {2011}
+}
 @article{Sevan2008,
 author = {Sivan, Yesha},
 issn = {19418477},
@@ -3435,26 +3445,6 @@ title = {{3D3C Real Virtual Worlds Defined : The Immense Potential of Merging 3D
 url = {http://scholar.google.com/scholar?hl=en\&btnG=Search\&q=intitle:3D3C+Real+Virtual+Worlds+Defined\#0},
 volume = {1},
 year = {2008}
-}
-@article{Sivan2008,
-annote = {Interesting bit about Vuzix iWear VR920 3D goggles which, through a special driver for Second Life, allowed you to view a virtual world simply by turning your head (but of course didn't work for any other virtual world \& in fact only a specific version of Second Life) - but shows that controlling the gaze of the avatar/camera from a real-time external data source is possible through modification of the VW server (eg a region module in OpenSim).},
-author = {Sivan, Yesha},
-journal = {Journal of Virtual Worlds Research},
-number = {2},
-title = {{Real Virtual Worlds SOS (State of Standards) Q3-2008}},
-url = {http://journals.tdl.org/jvwr/article/view/359},
-volume = {1},
-year = {2008}
-}
-@article{Sivan2011,
-abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
-author = {Sivan, Yesha},
-journal = {Journal of Virtual Worlds Research},
-number = {3},
-title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
-url = {https://journals.tdl.org/jvwr/article/view/6140},
-volume = {4},
-year = {2011}
 }
 @article{Sivan2009,
 annote = {        From Duplicate 1 (                           Overview: State of Virtual Worlds Standards in 2009                         - Sivan, Yesha )
@@ -3470,6 +3460,16 @@ title = {{Overview: State of Virtual Worlds Standards in 2009}},
 url = {http://journals.tdl.org/jvwr/article/view/671/539},
 volume = {2},
 year = {2009}
+}
+@article{Sivan2008,
+annote = {Interesting bit about Vuzix iWear VR920 3D goggles which, through a special driver for Second Life, allowed you to view a virtual world simply by turning your head (but of course didn't work for any other virtual world \& in fact only a specific version of Second Life) - but shows that controlling the gaze of the avatar/camera from a real-time external data source is possible through modification of the VW server (eg a region module in OpenSim).},
+author = {Sivan, Yesha},
+journal = {Journal of Virtual Worlds Research},
+number = {2},
+title = {{Real Virtual Worlds SOS (State of Standards) Q3-2008}},
+url = {http://journals.tdl.org/jvwr/article/view/359},
+volume = {1},
+year = {2008}
 }
 @article{Slater1999,
 abstract = {Explains why for not using the Witmer and Singer questionnaire for eliciting presence in virtual environments and a person's immersive tendencies. Differences in the definition of presence; Three aspects of presence; Factors that influence presence; Opinion on the questionnaire's design and methodology.},
@@ -3805,16 +3805,6 @@ title = {{TinyOS Home Page}},
 url = {http://www.tinyos.net/},
 urldate = {2012-02-22}
 }
-@incollection{Turkle2004,
-author = {Turkle, Sherry},
-booktitle = {Community in the Digital Age: Philosophy and Practice},
-chapter = {6},
-editor = {Feenberg, Andrew and Barney, Darin},
-pages = {101--117},
-publisher = {Rowman \& Littlefield},
-title = {{Our Split Screens}},
-year = {2004}
-}
 @book{Turkle2011,
 author = {Turkle, Sherry},
 pages = {384},
@@ -3831,6 +3821,16 @@ publisher = {Simon \& Schuster},
 title = {{Life on the Screen}},
 year = {1997}
 }
+@incollection{Turkle2004,
+author = {Turkle, Sherry},
+booktitle = {Community in the Digital Age: Philosophy and Practice},
+chapter = {6},
+editor = {Feenberg, Andrew and Barney, Darin},
+pages = {101--117},
+publisher = {Rowman \& Littlefield},
+title = {{Our Split Screens}},
+year = {2004}
+}
 @incollection{Tzortzaki2002,
 author = {Tzortzaki, Delia},
 booktitle = {Virtual Space: Spatiality in Virtual Inhabited 3D Worlds},
@@ -3838,14 +3838,8 @@ editor = {Qvortrup, Lars},
 isbn = {978-1-4471-0225-0},
 pages = {258--284},
 publisher = {Springer-Verlag},
-title = {{Virtual Reality as Simulation: The CAVE as "Space of Illusion" in Museum Displays}},
+title = {{Virtual Reality as Simulation: The CAVE as ``Space of Illusion'' in Museum Displays}},
 year = {2002}
-}
-@misc{U-bloxAG2012,
-author = {u-blox AG},
-title = {{MAX-6 Product Summary}},
-url = {http://www.u-blox.com/images/downloads/Product\_Docs/MAX-6\_ProductSummary\_(GPS.G6-HW-10089).pdf},
-year = {2012}
 }
 @misc{U-bloxAGa,
 author = {u-blox AG},
@@ -3858,6 +3852,12 @@ author = {u-blox AG},
 title = {{MAX-6 series}},
 url = {http://www.u-blox.com/en/gps-modules/pvt-modules/max-6.html},
 urldate = {2013-02-11}
+}
+@misc{U-bloxAG2012,
+author = {u-blox AG},
+title = {{MAX-6 Product Summary}},
+url = {http://www.u-blox.com/images/downloads/Product\_Docs/MAX-6\_ProductSummary\_(GPS.G6-HW-10089).pdf},
+year = {2012}
 }
 @misc{UgoTrade2007,
 annote = {From Duplicate 1 ( EOLUS Makes Leap To 3D Internet On Second Life - UgoTrade )},
